# alaska-legislative-data

./: CONTRIBUTING.md  LICENSE  README.md  api.js  api.ts  basis.xsd  cli.js  cli.ts  getAllSubjects.js  index.html  index.js  legislatures.csv  members.csv  memberships.csv  package.json  people.csv  pnpm-lock.yaml  serve.json  sessions.csv  subjects.txt  tracker.js  tsconfig.json  votes.csv
.github/workflows/: scrape.yml
examples/: cli.js  getAllSubjects.js  tracker.js
js/: README.md  index.js  package.json  pnpm-lock.yaml  tsconfig.json
js/examples/: index.html
python/: .gitignore  README.md  pyproject.toml  release.sh  scrape.ipynb
python/alaska_legislative_api/: __main__.py  _augment.py  _batch.py  _low.py  _parse.py  _scrape.py
python/alaska_legislative_data/: __main__.py  _augment.py  _batch.py  _bill_version_text.py  _curated.py  _db.py  _export.py  _git.py  _ingest.py  _low.py  _parse.py  _scrape.py  _split_choices.py  _util.py  members.csv  people.csv
python/notebooks/: .gitignore  _low.ipynb  _operating_budget.ipynb  augment.ipynb  bill_versions.ipynb  incremental.ipynb  ingest.ipynb  migrate_to_md.ipynb  parse.ipynb  publish.ipynb  scrape.ipynb
python/tests/: conftest.py  test_bills.py
