[project]
name = "alaska-legislative-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "ibis-framework>=10.3.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
duckdb = [
  "ibis-framework[duckdb]",
]
postgres = [
  "ibis-framework[postgres]",
  "psycopg[pool]",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
